update json file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MM_INSTANCE_ID=003fb4c4-d171-11ee-bdcc-7dd413efae24
-MM_SECRET=7wgqw3pdg8
+MM_INSTANCE_ID=da180ca2-d958-11ee-89d4-69fcd021b040
+MM_SECRET=g48r1qyxh6s
